Fix header overlap on web.archive.org

--- a/public/stylesheets/page.scss
+++ b/public/stylesheets/page.scss
@@ -11,7 +11,8 @@
   display: none;
   top: 0;
   @include box-shadow(0px 1px 22px -6px #CCC);
-  z-index: 100000;
+  // 1 bigger than the web.archive.org's funny z-index
+  z-index: 2147483641 !important;
   background: rgba(255, 255, 255, 0.95);
 
   span {
